package com.sgitu.g4.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.PrePersist;
import jakarta.persistence.PreUpdate;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import java.time.Instant;
import java.time.LocalDate;
import java.time.LocalTime;

@Entity
@Table(name = "horaires")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Horaire {

	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	private Long id;

	@ManyToOne(fetch = FetchType.LAZY, optional = false)
	@JoinColumn(name = "trajet_id")
	private Trajet trajet;

	@ManyToOne(fetch = FetchType.LAZY)
	@JoinColumn(name = "arret_id")
	private Arret arret;

	@Column(nullable = false)
	private LocalTime heurePassage;

	/** 1 = lundi … 7 = dimanche (ISO-8601). Null = tous les jours. */
	private Integer jourSemaine;

	private LocalDate validFrom;
	private LocalDate validTo;

	@Column(length = 500)
	private String libelle;

	@Column(nullable = false, updatable = false)
	private Instant createdAt;

	private Instant updatedAt;

	@PrePersist
	void prePersist() {
		Instant now = Instant.now();
		createdAt = now;
		updatedAt = now;
	}

	@PreUpdate
	void preUpdate() {
		updatedAt = Instant.now();
	}
}
